# py-pdf

./: README.md  pyproject.toml
docs/: pdf-ocr-speedup.md
scripts/: download_assets.py
src/pdf_text_extractor/: __init__.py  cli.py  extractor.py  ocr.py  render.py
tests/: test_cli.py  test_extractor.py  test_ocr.py  test_render.py
