[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-text-extractor"
version = "0.1.0"
description = "Extract Chinese text from native or scanned PDF files."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
authors = [{ name = "py-pdf maintainers" }]
dependencies = [
    "pypdf==5.1.0",
    "PyMuPDF==1.26.6",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86; platform_system == 'Linux'",
    "opencv-python==4.10.0.84; platform_system == 'Darwin'",
    "rapidocr==3.8.1",
    "onnxruntime==1.16.3; platform_system == 'Linux'",
    "onnxruntime>=1.16.3,<1.24; platform_system != 'Linux'",
    "Pillow==10.4.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
]

[project.scripts]
pdf-extract = "pdf_text_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
